--- a/first Notebook .ipynb
+++ b/first Notebook .ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a71d659b",
    "metadata": {
     "toc": true
    },
@@ -13,16 +12,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3d5b7cd",
    "metadata": {},
    "source": [
-    "this is my 1st notebook"
+    "this is my 2nd notebook  ......."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "67aa2bfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +29,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "88d8f97e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +38,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f2cc21dc",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2b1ca3b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -90,7 +84,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -104,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
